check for skip parameter + update swagger
